--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -30,4 +31,10 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+.darker-grotesque {
+  @apply font-darker-grotesque;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
 }
