--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+@import url('https://use.typekit.net/axj7lzz.css');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -19,57 +19,29 @@
   }
 }
 
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
 }
-.darker-grotesque {
-  @apply font-darker-grotesque;
-  font-optical-sizing: auto;
-  font-weight: 700;
-  font-style: normal;
-}
-.averia-serif-libre-light {
-  font-family: "Averia Serif Libre", serif;
-  font-weight: 300;
-  font-style: normal;
-}
 
-.averia-serif-libre-regular {
-  font-family: "Averia Serif Libre", serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.averia-serif-libre-bold {
-  font-family: "Averia Serif Libre", serif;
-  font-weight: 700;
-  font-style: normal;
-}
-
-.averia-serif-libre-light-italic {
-  font-family: "Averia Serif Libre", serif;
-  font-weight: 300;
-  font-style: italic;
-}
-
-.averia-serif-libre-regular-italic {
-  font-family: "Averia Serif Libre", serif;
+.dashiell-bright {
+  font-family: 'Dashiell Bright', serif;
   font-weight: 400;
   font-style: italic;
 }
-
-.averia-serif-libre-bold-italic {
-  font-family: "Averia Serif Libre", serif;
-  font-weight: 700;
-  font-style: italic;
-}
-
-.dm-sans {
-  font-family: "DM Sans", sans-serif;
-  font-optical-sizing: auto;
+.tenon {
+  font-family: 'Tenon', sans-serif;
   font-weight: 400;
+  font-style: normal;
+}
+.tenon-bold {
+  font-family: 'Tenon', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+.tenon-extra-bold {
+  font-family: 'Tenon', sans-serif;
+  font-weight: 800;
   font-style: normal;
 }
